# picframe

./: .gitattributes  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  configuration.yaml  picture_frame  picture_frame.py  pyproject.toml  setup.cfg  setup.py  test_weighted_sampling.py
.github/ISSUE_TEMPLATE/: issue-report.md
.github/workflows/: python-package-conda.yml  python-publish.yml  python-publish_token.yml  repo-maintenance.yml  test.yml
.github/workflows/config/: release-notes-config.json
config/: configuration_example.yaml
data/shaders/: blend_new.fs
docs/diagrams/src/: components.wsd
docs/homeassistant/: automation.yaml  card_filter.yaml  card_image.yaml  card_overlay.yaml
examples/: hass_frame.yaml  picture_frame_pip.service
examples/homeassistant/: card_control_frame.yaml
examples/systemd/: picframe.service
html/: index.html  pf_functions.js
picframe/: configuration_example.yaml  controller.py  exif2dict.py  geo_reverse.py  get_image_meta.py  image_cache.py  interface_http.py  interface_kbd.py  interface_mqtt.py  interface_peripherals.py  mat_image.py  model.py  picture_frame.py  start.py  viewer_display.py
picframe/config/: configuration_example.yaml
picframe/data/shaders/: blend_new.fs  blend_new.vs
picframe/examples/: hass_automation.yaml  hass_automation_blueprint.yaml  hass_image_card.yaml  picture_frame_git.service
picframe/examples/homeassistant/: hass_configuration.yaml
picframe/html/: index.html  pf_functions.js
src/: start.py
src/picframe/: _version.py  controller.py  geo_reverse.py  get_image_meta.py  image_cache.py  import_photos.py  interface_http.py  interface_mqtt.py  interface_peripherals.py  mat_image.py  model.py  start.py  video_metadata.py  video_player.py  video_streamer.py  viewer_display.py
src/picframe/config/: configuration_example.yaml
src/picframe/html/: index.html  pf_functions.js
test/: requirements.txt  test_exif2dict.py  test_get_image_meta.py  test_model.py  test_mqtt.py  test_video_player.py  test_viewer_display.py
test/images/: test3.HEIC
